--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -7,7 +7,7 @@
   <title>대출 통계 | 온투업 P2P 담보대출 통계 상세</title>
   <meta name="description" content="온라인투자연계금융업(P2P) 담보대출의 누적 대출금액, 상환금액, 대출잔액과 상품유형별 대출잔액을 월별로 확인할 수 있는 대출 통계 페이지입니다.">
   <meta name="robots" content="noindex, nofollow" />
-  <link rel="stylesheet" href="/assets/styles.css?v=20251203-ontu-stats" />
+  <link rel="stylesheet" href="/assets/styles.css?v=20251203-ontu-stats-final" />
 </head>
 <body class="beta-body ontu-stats-page">
 
