--- a/beta/ontu-stats.html
+++ b/beta/ontu-stats.html
@@ -103,7 +103,7 @@
     </section>
      <!-- 여기 아래에 출처 텍스트 추가 -->
     <div class="ontu-source-note">
-      ※ 데이터 출처: 온라인투자연계금융협회 &amp; 온투업 중앙기록관리기관 공시자료 기준
+      ※ 데이터 출처: 온라인투자연계금융업 중앙기록관리기관
     </div>
   </div>
 </body>
