--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
       <div class="step">
         <label class="steplabel no-badge-before">
-          (선택) 지분율 입력(공동소유 부동산의 경우)
+          (선택) 지분율 입력(단독소유시 미입력)
         </label>
         <div class="amount-row">
           <input
@@ -142,7 +142,7 @@
           <span id="sharePercent_view" class="amount-display">100%</span>
         </div>
         <p class="info">
-          *본인 지분율(%)을 1~100 숫자로 입력하세요.      
+          *본인 지분율(%)을 1~99 숫자로 입력하세요.      
         </p>
       </div>
     </div>
@@ -196,6 +196,7 @@
   </div>
 </body>
 </html>
+
 
 
 
