--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
       <div class="step">
         <label class="steplabel no-badge-before">
-          (선택) 대출금액중 상환+반환할 금액
+          (선택) 필요 대출금액중 상환+반환할 금액
         </label>
         <div class="amount-row">
           <input type="text" id="deduction" value="0">
@@ -196,6 +196,7 @@
   </div>
 </body>
 </html>
+
 
 
 
