--- a/beta/index.html
+++ b/beta/index.html
@@ -119,35 +119,43 @@
         </div>
       </section>
 
-      <!-- 대출현황 섹션 -->
-      <section class="beta-section">
-        <div class="stats-panel stats-panel--loan">
-          <div class="stats-panel__header">
-            <h2 class="stats-panel__title">대출 현황</h2>
-            <div id="loanStatusMonth" class="stats-panel__meta"></div>
-          </div>
+<section class="beta-section">
+  <!-- 회색 카드로 한 번 감싸기 -->
+  <div class="beta-card beta-card--wide">
+    <div class="stats-panel stats-panel--loan">
+      <div class="stats-panel__header">
+        <h2 class="stats-panel__title">대출 현황</h2>
+        <div id="loanStatusMonth" class="stats-panel__meta"></div>
+      </div>
 
-          <!-- 여기 그리드 안에 JS가 카드(.stats-card)를 여러 개 넣어줌 -->
-          <div id="ontuLoanStatus" class="stats-panel__grid stats-panel__grid--loan">
-            <!-- ontu-stats.js에서 .stats-card들을 렌더링 -->
-          </div>
+      <div id="ontuLoanStatus" class="stats-panel__grid stats-panel__grid--loan">
+        <!-- home-beta.js(또는 ontu-stats.js)에서 .stats-card들을 렌더 -->
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="beta-section">
+  <div class="beta-card beta-card--wide">
+    <div class="stats-panel stats-panel--products">
+      <div class="stats-panel__header">
+        <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
+        <div id="productStatusMonth" class="stats-panel__meta"></div>
+      </div>
+
+      <!-- 도넛 + 유형별 카드 레이아웃용 래퍼 -->
+      <div class="stats-panel__content">
+        <div class="stats-panel__chart">
+          <canvas id="productTypeDonut"></canvas>
         </div>
-      </section>
 
-      <!-- 상품유형별 대출잔액 섹션 -->
-      <section class="beta-section">
-        <div class="stats-panel stats-panel--products">
-          <div class="stats-panel__header">
-            <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-            <div id="productStatusMonth" class="stats-panel__meta"></div>
-          </div>
-
-          <!-- 여기도 그리드 컨테이너 -->
-          <div id="ontuProductSection" class="stats-panel__grid stats-panel__grid--products">
-            <!-- ontu-stats.js에서 .stats-card들을 렌더링 -->
-          </div>
+        <div id="ontuProductSection" class="stats-panel__grid stats-panel__grid--products">
+          <!-- JS에서 아파트/단독·다가구/토지… 유형별 .stats-card 렌더 -->
         </div>
-      </section>
+      </div>
+    </div>
+  </div>
+</section>
   </main>
 
   <!-- 푸터 -->
