--- a/beta/index.html
+++ b/beta/index.html
@@ -32,8 +32,7 @@
         class="beta-menu-toggle"
         type="button"
         aria-haspopup="true"
-        aria-expanded="false"
-      >
+        aria-expanded="false">
         <span class="beta-menu-toggle__label">MENU</span>
       </button>
 
@@ -81,46 +80,39 @@
             </button>
           </div>
 
-          <!-- 오른쪽: 기능 버튼 4개 + 금일 이용자수/배너 -->
+          <!-- 오른쪽: 2×2 기능 카드 + 금일 이용자수 + 서브 배너 -->
           <div class="beta-hero-right">
 
-            <!-- 4개 기능 버튼 (이미지 카드 → 버튼으로 변경) -->
-            <div class="beta-hero-links">
-              <a href="/beta/ontu-stats.html" class="hero-link-btn">
-                <span>온투업(P2P) 대출통계</span>
-              </a>
-              <a href="/beta/products/index.html" class="hero-link-btn">
-                <span>온투업(P2P) 대출상품정보</span>
-              </a>
-              <a href="/" class="hero-link-btn">
-                <span>담보대출 가능액 계산기</span>
-              </a>
-              <a href="https://blog.naver.com/honestbros" target="_blank" rel="noopener" class="hero-link-btn">
-                <span>후추 공식 블로그</span>
-              </a>
+            <!-- 2×2 이미지 카드 (정적 링크) -->
+            <div class="beta-hero-cards">
+              <div class="beta-hero-cards__grid">
+                <a href="/beta/ontu-stats.html" class="beta-hero-card">
+                  <img src="/assets/hero-card-stat.png" alt="온투업(P2P) 대출 통계" />
+                </a>
+                <a href="/beta/products/index.html" class="beta-hero-card">
+                  <img src="/assets/hero-card-products.png" alt="온투업(P2P) 대출 상품 정보" />
+                </a>
+                <a href="/" class="beta-hero-card">
+                  <img src="/assets/hero-card-calculator.png" alt="온투업 전용 담보대출 계산기" />
+                </a>
+                <a href="https://blog.naver.com/honestbros" target="_blank" rel="noopener" class="beta-hero-card">
+                  <img src="/assets/hero-card-blog.png" alt="후추 공식 블로그" />
+                </a>
+              </div>
             </div>
 
-            <!-- 금일 이용자수 + 서브 이미지 (좌우 1:1) -->
+            <!-- 금일 이용자수 + 서브 이미지 -->
             <div class="beta-subinfo">
-              <!-- 왼쪽: 금일 이용자수 -->
-              <div class="beta-subinfo__left">
-                <div class="beta-subinfo__metric-row">
-                  <div class="beta-subinfo__label">금일 계산기 이용자수</div>
-                  <div class="beta-subinfo__value">
-                    <span id="todayUsersCount">0</span>
-                    <span class="unit">명</span>
-                  </div>
+              <div class="beta-subinfo__metric-row">
+                <div class="beta-subinfo__label">금일 계산기 이용자수</div>
+                <div class="beta-subinfo__value">
+                  <span id="todayUsersCount">0</span>
+                  <span class="unit">명</span>
                 </div>
               </div>
-
-              <!-- 오른쪽: 개인정보 안내 배너 이미지 -->
-              <div class="beta-subinfo__right">
-                <div class="beta-subinfo__banner">
-                  <img
-                    src="/assets/hero-subinfo-banner.png"
-                    alt="개인정보 입력 없이 간편하게 담보대출 가능 여부를 확인해보세요."
-                  >
-                </div>
+              <div class="beta-subinfo__banner">
+                <img src="/assets/hero-subinfo-banner.png"
+                     alt="개인정보 입력 없이 간편하게 담보대출 가능 여부를 확인해보세요.">
               </div>
             </div>
 
@@ -128,40 +120,35 @@
         </div>
       </section>
 
-      <!-- 대출현황 섹션 (회색 카드 안에 초록 패널) -->
+      <!-- 대출현황 섹션 -->
       <section class="beta-section">
-        <div class="beta-card beta-card--wide">
-          <div class="stats-panel stats-panel--loan">
-            <div class="stats-panel__header">
-              <h2 class="stats-panel__title">대출 현황</h2>
-              <div id="loanStatusMonth" class="stats-panel__meta"></div>
-            </div>
+        <div class="stats-panel stats-panel--loan">
+          <div class="stats-panel__header">
+            <h2 class="stats-panel__title">대출 현황</h2>
+            <div id="loanStatusMonth" class="stats-panel__meta"></div>
+          </div>
 
-            <!-- 여기 그리드 안에 JS가 카드(.stats-card)를 여러 개 넣어줌 -->
-            <div id="ontuLoanStatus" class="stats-panel__grid stats-panel__grid--loan">
-              <!-- home-beta.js에서 .beta-loanstatus-grid 렌더링 -->
-            </div>
+          <!-- 여기 그리드 안에 JS가 카드(.beta-loanstatus-item)를 여러 개 넣어줌 -->
+          <div id="ontuLoanStatus" class="stats-panel__grid stats-panel__grid--loan">
+            <!-- home-beta.js에서 렌더링 -->
           </div>
         </div>
       </section>
 
-      <!-- 상품유형별 대출잔액 섹션 (회색 카드 안에 초록 패널) -->
+      <!-- 상품유형별 대출잔액 섹션 -->
       <section class="beta-section">
-        <div class="beta-card beta-card--wide">
-          <div class="stats-panel stats-panel--products">
-            <div class="stats-panel__header">
-              <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
-              <div id="productStatusMonth" class="stats-panel__meta"></div>
-            </div>
+        <div class="stats-panel stats-panel--products">
+          <div class="stats-panel__header">
+            <h2 class="stats-panel__title">상품유형별 대출잔액</h2>
+            <div id="productStatusMonth" class="stats-panel__meta"></div>
+          </div>
 
-            <!-- JS에서 도넛 + 유형별 박스 렌더링 -->
-            <div id="ontuProductSection" class="stats-panel__grid stats-panel__grid--products">
-              <!-- home-beta.js에서 도넛 + .beta-product-box 들 렌더링 -->
-            </div>
+          <!-- 도넛 + 우측 카드 그리드 (A안) -->
+          <div id="ontuProductSection" class="stats-panel__grid stats-panel__grid--products">
+            <!-- home-beta.js에서 .beta-product-grid 구조로 렌더링 -->
           </div>
         </div>
       </section>
-
     </div>
   </main>
 
@@ -174,11 +161,9 @@
     </div>
     <div class="beta-footer__bottom">
       <div class="beta-footer__brand">
-        <img
-          src="/assets/logo/huchu-logo-white.png"
-          alt="HUCHU 로고"
-          class="beta-footer__logo-img"
-        />
+        <img src="/assets/logo/huchu-logo-white.png"
+             alt="HUCHU 로고"
+             class="beta-footer__logo-img" />
         <span class="beta-footer__logo-text">HUCHU</span>
       </div>
       <div class="beta-footer__info">
